[package]
name = "pittv3-wasm"
version = "0.1.3"
description = """
Browser-based frontend for the PKI Interoperability Test Tool v3 (PITTv3) that performs
certification path validation in a WASM context, including validation of certificates signed
using post-quantum algorithms, i.e., ML-DSA and SLH-DSA.
"""
authors = [""]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/carl-wallace/rust-pki"
categories = ["cryptography", "pki", "wasm"]
keywords = ["crypto", "x.509", "PQC"]
readme = "README.md"
edition = "2021"
rust-version = "1.88"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# The browser frontend builds certval with no-default-features (no filesystem, network or thread
# support) plus pqc. Trust anchor and CA stores are baked in as CBOR at build time or supplied by
# the user via file upload.
[dependencies]
certval = { path = "../certval", default-features = false, features = ["eddsa", "pqc", "rsa"] }
pittv3_lib = { path = "../pittv3-lib", default-features = false, features = ["eddsa", "pqc", "rsa"] }
pittv3_gui_lib = { path = "../pittv3-gui-lib", default-features = false, features = ["pqc"] }

dioxus = { version = "0.7.9", features = ["web"] }
log = "0.4.33"
pem-rfc7468 = { version = "1.0.0", features = ["alloc"] }
serde = { version = "1.0.228", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0.150", default-features = false, features = ["alloc"] }
web-time = "1.1.0"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }

# getrandom 0.4 (pulled in transitively via the RustCrypto 0.3/0.8 wave, e.g. crypto-common) has no
# default backend on wasm32-unknown-unknown; the wasm_js feature opts into the JS (wasm-bindgen)
# backend. Target-gated so native builds (e.g. the ziptest bin) do not pull in wasm-bindgen/js-sys.
[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }
# Browser fetch for pulling store CBOR on demand (see fetch_bytes). wasm-only; native builds use a
# stub, so keep the dependency off the host target where it would not compile.
gloo-net = { version = "0.6", default-features = false, features = ["http"] }
# js_sys::Date::parse converts the datetime-local picker's local-time string to the Unix-epoch
# time of interest; wasm-only, with a host stub in main.rs.
js-sys = "0.3"
# navigator.maxTouchPoints distinguishes iPad/iPhone (which masquerade as desktop in the UA) so the
# store file inputs can broaden their `accept` filter only there; wasm-only, host stub in main.rs.
# Storage is the window.localStorage binding used to persist the settings tab across reloads.
# Already in the tree via dioxus's web feature, so this only names the bindings.
web-sys = { version = "0.3", features = ["Window", "Navigator", "Storage"] }
# A one-frame yield so the "Validating…" busy state paints before the (blocking, single-threaded)
# parse/validation runs; wasm-only.
gloo-timers = { version = "0.3", features = ["futures"] }
