[workspace]

[package]
name = "rust-certval-harness"
version = "0.1.1"
edition = "2021"

[dependencies]
limbo-harness-support = { path = "../x509-limbo/harness-support/rust" }
chrono = "0.4.45"
pem = "3.0.6"
serde_json = "1.0.150"
certval = { path = "../../certval", features = ["rsa"] }
x509-cert = { version = "0.3.0", features = ["hazmat"] }
rayon = "1.12.0"
cidr = "0.2.3"

ed25519-dalek = { version = "3.0.0", default-features = false, features = ["fast", "zeroize", "pkcs8"] }

[patch.crates-io]
# x509-ocsp has no 0.3 crates.io release yet (max published 0.2.1), so pull it from formats.git to
# match the now-published x509-cert 0.3.0. Drop this patch once x509-ocsp 0.3 publishes.
x509-ocsp = { git = "https://github.com/RustCrypto/formats.git" }
